tests/valid/template_type.lang
typedef Hello!(T) struct {
    t: T 
};

typedef Yo!(T) T;

typedef HelloInt Hello!(i32);

fn main() {
    var h: Hello!(i32);
    h = Hello!(i32) {123};
    h = HelloInt {123};
    var a: i32 = h.t;

    var b = Hello!([_]char) { "hello" };
    b.t = "yo";

    var c: Yo!(i32) = 123;
    var d: i32 = c;
}
