tests/invalid/distinct_types.lang
typedef MyInt distinct int;

fn main() {
    var a: int = 123;
    var b: MyInt = a;
}
